--- a/codes/turma.css
+++ b/codes/turma.css
@@ -6,7 +6,7 @@
   background-color: #101014;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #0888d3;
+  background-color: #242424;
   border-radius: 8px;
 }
 
@@ -33,7 +33,7 @@ html {
   font-family: "Ubuntu", sans-serif;
   z-index: 999;
   transition: all 0.3s ease;
-  background-color: #15151a;
+  background-color: none;
 }
 .navbar.sticky {
   background: #101014;
@@ -50,11 +50,11 @@ html {
   font-weight: 500;
 }
 .navbar .logo a span {
-  color: #0888d3;
+  color: #c29308;
   transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span {
-  color: #0888d3;
+  color: #c29308;
 }
 
 .navbar .menu li {
@@ -70,16 +70,47 @@ html {
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  color: #0888d3;
+  color: #c29308;
 }
 .navbar.sticky .menu li a:hover {
-  color: #0888d3;
+  color: #c29308;
+}
+
+/*  Menu  Mobile  */
+.menu-btn {
+  color: #fff;
+  font-size: 26px;
+  cursor: pointer;
+  display: none;
+}
+.scroll-up-btn {
+  position: fixed;
+  width: 41px;
+  height: 45px;
+  right: 30px;
+  bottom: 30px;
+  text-align: center;
+  line-height: 50px;
+  color: #fff;
+  background: #0888d3;
+  border-radius: 6px;
+  font-size: 30px;
+  z-index: 9999;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+.scroll-up-btn.show {
+  bottom: 30px;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 /*  Home   inicio  */
 .home {
   display: flex;
-  /*background: url(image/banner1.png) no-repeat;*/
+  background: url(../public/banner.png) no-repeat;
   background-color: #101014;
   background-size: cover;
   height: 100vh;
@@ -109,20 +140,71 @@ html {
 }
 .home .home-content a {
   display: inline-block;
-  background: #0888d3;
+  background: #c29308;
   color: #f1f1f1;
   font-size: 25px;
   padding: 12px 36px;
   margin-top: 20px;
   margin-right: 20px;
-  border-radius: 6px;
-  border: 2px solid #0888d3;
+  border-radius: 50px;
+  border: 3px solid #c29308;
 }
 .home .home-content a:hover {
-  color: #0888d3;
+  color: #c29308;
   background: none;
 }
 
 .home .typing {
   font-size: 33px;
+}
+
+/*  sessão sobre  */
+.about {
+  background-color: #f1f1f1;
+}
+.about .title::after {
+  content: "Quem sou eu";
+  font-size: 20px;
+  background-color: #f1f1f1;
+  color: #101014;
+}
+
+.about .about-content .left {
+  width: 45%;
+}
+.about .about-content .right {
+  width: 55%;
+}
+.about .about-content .right .text {
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+.about .about-content .right .text span {
+  color: #0888d3;
+}
+.about .about-content .right p {
+  text-align: justify;
+}
+.about .about-content .right a {
+  display: inline-block;
+  background: #0888d3;
+  color: #f1f1f1;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid #0888d3;
+  transition: all 0.3s ease;
+}
+.about .about-content .right a:hover {
+  color: #0888d3;
+  background: none;
+}
+.about .about-content .left img {
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 6px;
 }
