--- a/codes/turma.css
+++ b/codes/turma.css
@@ -33,7 +33,7 @@ html {
   font-family: "Ubuntu", sans-serif;
   z-index: 999;
   transition: all 0.3s ease;
-  background-color: none;
+  background-color: #09090a;
 }
 .navbar.sticky {
   background: #101014;
@@ -50,11 +50,11 @@ html {
   font-weight: 500;
 }
 .navbar .logo a span {
-  color: #c29308;
+  color: #2b4c7e;
   transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span {
-  color: #c29308;
+  color: #2b4c7e;
 }
 
 .navbar .menu li {
@@ -70,10 +70,10 @@ html {
   transition: color 0.3s ease;
 }
 .navbar .menu li a:hover {
-  color: #c29308;
+  color: #2b4c7e;
 }
 .navbar.sticky .menu li a:hover {
-  color: #c29308;
+  color: #2b4c7e;
 }
 
 /*  Menu  Mobile  */
@@ -92,7 +92,7 @@ html {
   text-align: center;
   line-height: 50px;
   color: #fff;
-  background: #0888d3;
+  background: #2b4c7e;
   border-radius: 6px;
   font-size: 30px;
   z-index: 9999;
@@ -105,6 +105,58 @@ html {
   bottom: 30px;
   opacity: 1;
   pointer-events: auto;
+}
+/*  todos os codigos similares  */
+section {
+  padding: 100px 0;
+}
+section .title {
+  font-family: "Ubuntu", sans-serif;
+  text-align: center;
+  font-size: 45px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  position: relative;
+}
+section .title::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 180px;
+  height: 3px;
+  background: #101014;
+  transform: translateX(-50%);
+}
+section .title::after {
+  position: absolute;
+  bottom: -12px;
+  left: 50%;
+  font-size: 20px;
+  background: #fff;
+  color: #101014;
+  padding: 5px;
+  transform: translateX(-50%);
+}
+.about,
+.projetos,
+.services,
+.skills,
+.teams,
+.contact,
+footer {
+  font-family: "Roboto", sans-serif;
+}
+.about .about-content,
+.services .serv-content,
+.skills .skills-content,
+.contact .contact-content,
+.projetos .project-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /*  Home   inicio  */
@@ -135,22 +187,22 @@ html {
   margin: 5px 0;
 }
 .home .home-content .text-3 span {
-  color: #0888d3;
+  color: #2b4c7e;
   font-weight: 500;
 }
 .home .home-content a {
   display: inline-block;
-  background: #c29308;
+  background: #2b4c7e;
   color: #f1f1f1;
   font-size: 25px;
   padding: 12px 36px;
   margin-top: 20px;
   margin-right: 20px;
   border-radius: 50px;
-  border: 3px solid #c29308;
+  border: 3px solid #2b4c7e;
 }
 .home .home-content a:hover {
-  color: #c29308;
+  color: #2b4c7e;
   background: none;
 }
 
@@ -160,12 +212,12 @@ html {
 
 /*  sessão sobre  */
 .about {
-  background-color: #f1f1f1;
+  background-color: #f2f2f2;
 }
 .about .title::after {
-  content: "Quem sou eu";
+  content: "Quem somos";
   font-size: 20px;
-  background-color: #f1f1f1;
+  background-color: #f2f2f2;
   color: #101014;
 }
 
@@ -181,30 +233,33 @@ html {
   margin-bottom: 10px;
 }
 .about .about-content .right .text span {
-  color: #0888d3;
+  color: #2b4c7e;
 }
 .about .about-content .right p {
   text-align: justify;
+  font-size: 18px;
 }
 .about .about-content .right a {
   display: inline-block;
-  background: #0888d3;
+  background: #2b4c7e;
   color: #f1f1f1;
   font-size: 20px;
   font-weight: 500;
   padding: 10px 30px;
   margin-top: 20px;
-  border-radius: 6px;
-  border: 2px solid #0888d3;
+  border-radius: 50px;
+  border: 2px solid #2b4c7e;
   transition: all 0.3s ease;
 }
 .about .about-content .right a:hover {
-  color: #0888d3;
+  color: #2b4c7e;
   background: none;
 }
 .about .about-content .left img {
   width: 400px;
   height: 400px;
   object-fit: cover;
-  border-radius: 6px;
+  border-radius: 8px;
 }
+
+/* Turma */
