--- a/codes/turma.css
+++ b/codes/turma.css
@@ -33,10 +33,10 @@ html {
   font-family: "Ubuntu", sans-serif;
   z-index: 999;
   transition: all 0.3s ease;
-  background-color: #09090a;
+  background-color: #00000000;
 }
 .navbar.sticky {
-  background: #101014;
+  background-color: #080808;
   padding: 15px 0;
 }
 .navbar .max-width {
@@ -53,7 +53,7 @@ html {
   color: #2b4c7e;
   transition: all 0.3s ease;
 }
-.navbar.sticky .logo a span {
+header .sticky .logo a span {
   color: #2b4c7e;
 }
 
@@ -72,7 +72,7 @@ html {
 .navbar .menu li a:hover {
   color: #2b4c7e;
 }
-.navbar.sticky .menu li a:hover {
+header.sticky .menu li a:hover {
   color: #2b4c7e;
 }
 
@@ -118,6 +118,7 @@ section .title {
   margin-bottom: 60px;
   padding-bottom: 20px;
   position: relative;
+  color: #f2f2f2;
 }
 section .title::before {
   content: "";
@@ -126,7 +127,7 @@ section .title::before {
   left: 50%;
   width: 180px;
   height: 3px;
-  background: #101014;
+  background: #f2f2f2;
   transform: translateX(-50%);
 }
 section .title::after {
@@ -135,7 +136,7 @@ section .title::after {
   left: 50%;
   font-size: 20px;
   background: #fff;
-  color: #101014;
+  color: #f2f2f2;
   padding: 5px;
   transform: translateX(-50%);
 }
@@ -162,11 +163,11 @@ footer {
 /*  Home   inicio  */
 .home {
   display: flex;
-  background: url(../public/banner.png) no-repeat;
+  background: url(../public/banner.jpg) no-repeat;
   background-color: #101014;
   background-size: cover;
   height: 100vh;
-  color: #fff;
+  color: #f2f2f2;
   min-height: 500px;
   font-family: "Ubuntu", sans-serif;
 }
@@ -193,7 +194,7 @@ footer {
 .home .home-content a {
   display: inline-block;
   background: #2b4c7e;
-  color: #f1f1f1;
+  color: #f2f2f2;
   font-size: 25px;
   padding: 12px 36px;
   margin-top: 20px;
@@ -212,13 +213,13 @@ footer {
 
 /*  sessão sobre  */
 .about {
-  background-color: #f2f2f2;
+  background-color: #080808;
 }
 .about .title::after {
   content: "Quem somos";
   font-size: 20px;
-  background-color: #f2f2f2;
-  color: #101014;
+  background-color: #080808;
+  color: #f2f2f2;
 }
 
 .about .about-content .left {
@@ -231,6 +232,7 @@ footer {
   font-size: 25px;
   font-weight: 500;
   margin-bottom: 10px;
+  color: #f2f2f2;
 }
 .about .about-content .right .text span {
   color: #2b4c7e;
@@ -242,7 +244,7 @@ footer {
 .about .about-content .right a {
   display: inline-block;
   background: #2b4c7e;
-  color: #f1f1f1;
+  color: #f2f2f2;
   font-size: 20px;
   font-weight: 500;
   padding: 10px 30px;
@@ -260,6 +262,9 @@ footer {
   height: 400px;
   object-fit: cover;
   border-radius: 8px;
+}
+.about .about-content .right p {
+  color: #dfdfdf;
 }
 
 /* Turma */
